# stryktips-bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  EXPERT_SYSTEM_PROGRESS.md  FOOTBALL_HISTORY.md  GITHUB_ACTIONS_SETUP.md  MANUAL_INPUT.md  PROJECT_STATUS.md  PUBLISH_README.md  QUICKSTART_GITHUB_ACTIONS.md  README.md  add_liverpool_k3s.sql  add_test_match.py  alembic.ini  analyze_liverpool.py  cleanup_football_tables.py  deploy-to-k3s.sh  docker-compose.yml  example_coupon.txt  publish_to_k3s.sh  publish_to_k3s_complete.sql  pyproject.toml  requirements.txt  stryktipset_page.html  update_k3s_database.sh  verify_football_data.py  verify_schema.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  manual-deploy.yml
alembic/: env.py
alembic/versions/: 7f769e0caa68_add_expert_items_table.py  9544f82e6b16_add_football_history_tables.py  f902bea8bb6c_add_title_summary_and_match_tags_to_.py
docs/: REAL_SCRAPING_STATUS.md  SCRAPING_GUIDE.md
k8s/: configmap.yaml  cronjob-experts.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secrets.example.yaml  service.yaml
scripts/: clean_and_update.py  init_db.py  inspect_svenska_spel.py  load_football_history.py  manual_coupon_input.py  run_analysis.py  test_api_structure.py
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  expert_summarizer.py  row_generator.py  value_calculator.py
src/api/: dependencies.py  routes.py
src/database/: session.py
tests/: conftest.py  test_analysis.py  test_api.py  test_models.py
(+56 files in other folders)
