[tool.poetry]
name = "stryktips-bot"
version = "0.1.0"
description = "Stryktips analysis bot with odds, expert opinions and value betting"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.17"
python-dateutil = "^2.9.0"
pandas = "^2.2.3"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
types-python-dateutil = "^2.9.0"
types-beautifulsoup4 = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
